@@ -60,6 +60,7 @@ import java.net.URLClassLoader;
 import java.net.URLDecoder;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -1114,7 +1115,8 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                 final Path licenseFile = file.getLocalFile();
                 if (licenseFile != null && Files.exists(licenseFile)) {
                     try {
-                        return Files.readString(licenseFile);
+                        // Use readAllBytes because readString may fail if file charset is inconsistent
+                        return new String(Files.readAllBytes(licenseFile));
                     } catch (IOException e) {
                         log.warn(e);
                     }
@@ -1395,11 +1397,6 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
                     }
                 }
             }
-        }
-
-        // Now check driver version
-        if (DBWorkbench.getPlatform().getPreferenceStore().getBoolean(ModelPreferences.UI_DRIVERS_VERSION_UPDATE) && !downloaded) {
-            // TODO: implement new version check
         }
 
         // Check if local files are zip archives with jars inside
@@ -1716,7 +1713,7 @@ public class DriverDescriptor extends AbstractDescriptor implements DBPDriver {
         if (info.fileCRC != targetCRC) {
             // Copy file
             try {
-                Files.copy(srcLocalFile, trgLocalFile);
+                Files.copy(srcLocalFile, trgLocalFile, StandardCopyOption.REPLACE_EXISTING);
             } catch (IOException e) {
                 log.error("Error copying library file '" + srcLocalFile + "' into '" + trgLocalFile + "'", e);
                 return null;
